--- a/examples/index.html
+++ b/examples/index.html
@@ -7,11 +7,14 @@
 <body>
 	<h3>learn</h3>
 	<ul>
-		<li><a href="plane.html">plane</a></li>
+		<li><a href="controls.html">controls</a></li>
+		<li><a href="pick_object.html">pick object</a></li>
+		<li><a href="collision.html">collision</a></li>
+		<li><a href="room.html">room</a></li>
 	</ul>
 	<h3>example</h3>
 	<ul>
-		<li><a href="day_by_day.html">day_by_day</a></li>
+		<li><a href="day_by_day.html">day by day</a></li>
 	</ul>
 </body>
 </html>
